# textfairy

./: .gitignore  .gitmodules  .travis.yml  README.md  Scan666.html  build.gradle  gradle.properties  no_ligature  pom.xml  privacy-policy.md  settings.gradle
CppTestProject/: .cproject
CppTestProject/images/: scan_test.html
CppTestProject/src/: HelloWorld2.cpp  main.cpp
FileExplorer/: AndroidManifest.xml  build.gradle  pom.xml
OCRTest/: .cproject  .gitignore  .project
OCRTest/Debug/: OCRTest  hocrtext.html  objects.mk  utf8text.txt
OCRTest/Release/: makefile  objects.mk
OCRTest/deu/: deu.arialbd.g4.tif  deu.ariali.g4.tif  deu.c059013l.g4.tif  deu.c059016l.box  deu.c059016l.g4.tif  deu.c059033l.g4.tif  deu.c059036l.box  deu.c059036l.g4.tif  deu.cour.g4.tif  deu.couri.box  deu.georgia.box  deu.georgiab.box  deu.georgiai.g4.tif  deu.georgiaz.box  deu.georgiaz.g4.tif  deu.times.box  deu.timesbd.g4.tif  deu.timesi.g4.tif  deu.trebuc.box  deu.trebuc.g4.tif  deu.trebucbd.box  deu.trebucbd.g4.tif  deu.trebucbi.box  deu.trebucbi.g4.tif  deu.trebucit.g4.tif  deu.verdana.g4.tif  deu.verdanai.box  deu.verdanaz.box
OCRTest/src/: .cproject  Android.mk  PixBinarizer.cpp  PixBinarizer.h  PixBlurDetect.cpp  PixBlurDetect.h  RunningStats.cpp  RunningStats.h  RunningTextlineStats.cpp  (+24 more)
PhotoView/: build.gradle
app/: .classpath  .cproject  .project  Android.mk  AndroidManifest.xml  Application.mk  build.gradle  google-services.json  lint.xml  project.properties
app/libs/libpng-android/: CMakeLists.txt  README.rst  build.sh  png-config.cmake.in
app/libs/libpng-android/jni/: Android.mk  Application.mk
hocr2pdf/: .project  Fernberger01.html  textfairy_hocr_202.html
image-processing/: .cproject  .gitignore  xv
leptonica-1.68/: .cproject  .project  Makefile  config.status  config_auto.h  libtool  stamp-h1
libjpeg/: Android.mk  cjpeg  config.status  djpeg  jidctfst.S  jpegtran  makefile  rdjpgcom  wrjpgcom
libpng-android/: .gitignore  README.rst
perf-test/: build.gradle
tesseract-ocr-3.02/: .cproject  .project  Makefile  Makefile.in  config.status  config_auto.h  configure  libtool
tesseract-ocr-read-only/: .cproject  Makefile  Makefile.in  aclocal.m4  config.status  config_auto.h  configure  configure.ac  libtool  monitor.diff  tesseract.pc
testapp/: build.gradle  proguard-rules.pro
textfairy/: .classpath  .cproject  .project  AndroidManifest.xml  build.gradle  build.xml  gradle properties  pom.xml  project.properties  tips_de.rtf  tips_en.rtf
(+2046 files in other folders)
